# DANR

./: .gitignore  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  package-lock.json  package.json
backend/src/: index.ts
backend/src/config/: database.ts
backend/src/models/: ANR.ts  ANRGroup.ts  ProfileSession.ts
backend/src/routes/: anrRoutes.ts  profileRoutes.ts
backend/src/services/: anrService.ts
backend/src/sockets/: deviceRegistry.ts  deviceSocket.ts
backend/src/utils/: anrProcessor.ts  flameGraphAggregator.ts  perfettoExporter.ts
danr-zygisk/: .gitignore  IMPLEMENTATION_SUMMARY.md  INSTALL_EXAMPLE.md  QUICKSTART.md  README.md  build.gradle.kts  build.sh
danr-zygisk/.claude/: settings.local.json
danr-zygisk/config/: config.json
danr-zygisk/jni/: CMakeLists.txt  cpu_freq_manager.cpp  cpu_freq_manager.h  main.cpp  webserver.cpp
danr-zygisk/jni/stress/: cpu_stressor.cpp  cpu_stressor.h  disk_stressor.cpp  disk_stressor.h  memory_stressor.cpp  memory_stressor.h  network_stressor.cpp  network_stressor.h  stress_manager.cpp  stress_manager.h  stressor_base.cpp  stressor_base.h  thermal_stressor.cpp  thermal_stressor.h
danr-zygisk/module/: action.sh  build-label-cache.sh  customize.sh  module.prop  post-fs-data.sh  service.sh  settings.json
danr-zygisk/web/: app.js  index.html  style.css
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/config/: page.tsx
frontend/src/app/devices/: page.tsx
frontend/src/app/groups/: page.tsx
frontend/src/app/profiles/: page.tsx
frontend/src/app/stress/: page.tsx
frontend/src/components/: AppLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useDaemonStore.ts  useDevices.ts
frontend/src/lib/: api.ts  profileUtils.ts  socket.ts  stressApi.ts
sdk/: README.md  gradle.properties  settings.gradle.kts
sdk/danr/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
(+29 files in other folders)
